Include supported aggregations in field caps api response
Improve field caps api to include what aggregations are supported on a per field bases.
For fields that are aggregatable, a list of supported aggregations is included.

Closes #93539